# occurrence_counter_driver

./: Makefile  display.h  led_matrix  letters.txt  readme.md  receiveRasp  receiveRasp.c  sendRasp  sendRasp.c  sendRasp.h  test.c  testLib  testLib.c
5.15.167/: cdc-acm.c
5.19.0/: cdc-acm .c
6.11.5/: cdc-acm.c
6.8/: Makefile  driver_use.md  ftdi_sio.c  ftdi_sio_ids.h  our_driver.c
Algorithm/: 1984.txt  Pruebas.c  encryption.c  mobydick.txt  prueba  search_agorithm.c  search_agorithm.h  search_algorithm  search_algorithm.c  search_algorithm.h
Encryption/: CMakeLists.txt  encryption.c  encryption.h  fieldArithmetic.c  fieldArithmetic.h  main.c  protocolDH.c  protocolDH.h
driver/: led_matrix
mpiFiles/: helloworld.c  sendRasp.c  sendRasp.h
